--- a/HarmonogramSzkolny/HarmonogramSzkolny.csproj
+++ b/HarmonogramSzkolny/HarmonogramSzkolny.csproj
@@ -131,6 +131,9 @@
     <Compile Include="Repos\StaticRepo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\map.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -187,6 +190,7 @@
     <Content Include="Views\Home\_Subjects.cshtml" />
     <Content Include="Views\Home\AllMobile.cshtml" />
     <Content Include="Views\Home\_SubjectsMobile.cshtml" />
+    <Content Include="Views\Home\Map.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
