--- a/HarmonogramSzkolny/HarmonogramSzkolny.csproj
+++ b/HarmonogramSzkolny/HarmonogramSzkolny.csproj
@@ -153,6 +153,7 @@
     <Content Include="App_Data\excelData.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\local.pubxml" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
